# serpents

./: .pre-commit-config.yaml  Makefile  README.md  my_image_classifier.onnx  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci-format.yml  ci-pyright.yml  ci-pytest-nbval-posts.yml  ci-pytest.yml
experiments/: 2023-01-13-dis.py  2023-01-16-pytorch-onnx.py  canonicalization.py
graphs/: simple_digraph.py
graphs/tests/: test_simple_digraph.py
posts/: Chapter 1 RISC-V Assembly.ipynb  Hacker's Delight 1.ipynb  Post 1 RISC-V Assembly.ipynb
