[tool.poetry]
name = "serpents"
version = "0.1.0"
description = ""
authors = ["Sasha Lopoukhine <sasha@lopoukhine.com>"]
readme = "README.md"
packages = [{ include = "graphs" }]

[tool.poetry.dependencies]
python = "^3.11"
xdsl = "^0.20"
pyright = "^1.1.369"
pytest = "^8.2.2"
numpy = "^2.0.0"
ipykernel = "^6.29.5"
nbval = "^0.11.0"
riscemu = "^2.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
enableTypeIgnoreComments = false
typeCheckingMode = "strict"
"include" = ["serpents"]

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "W", "I", "UP", "PT"]
line-length = 90
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10
