[project]
name = "serpents"
version = "0.1.0"
description = ""
authors = [{ name = "Sasha Lopoukhine", email = "sasha@lopoukhine.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "xdsl>=0.53,<0.54",
    "pyright>=1.1.402,<2",
    "pytest>=8.4.0,<9",
    "numpy>=2,<3",
    "ipykernel>=6.29.5,<7",
    "nbval>=0.11.0,<0.12",
    "riscemu>=2.2.7,<3",
]

[tool.hatch.build.targets.sdist]
include = ["graphs"]

[tool.hatch.build.targets.wheel]
include = ["graphs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
enableTypeIgnoreComments = false
typeCheckingMode = "strict"
"include" = ["serpents"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PT"]

[tool.ruff.lint.mccabe]
max-complexity = 10
